<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".Activity.CreateAccount">
    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="70sp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/upper_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8sp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_to_account"
                    android:textColor="@color/text_color"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:text="@string/get_personalise_experience_and_offer_here"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/middle_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/account_contact_number_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="25sp"
                    android:gravity="center"
                    android:orientation="horizontal">
                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="18sp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_mobile_icon" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="3sp"
                    app:hintEnabled="false"
                    android:textColorHint="@color/text_color"
                    android:layout_height="wrap_content">>
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/account_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="3sp"
                        android:inputType="number"
                        android:maxLength="13"
                        android:background="@null"
                        android:backgroundTint="@color/text_color"
                        android:hint="@string/mobile_number"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/text_color" />
                </android.support.design.widget.TextInputLayout></LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="4sp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_color"
                    ></LinearLayout>
                <LinearLayout
                    android:id="@+id/account_email_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="18sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5sp"
                        android:src="@drawable/login_mail" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:textColor="@color/text_color"
                        android:layout_marginLeft="3sp"
                        app:hintEnabled="false"
                        android:textColorHint="@color/text_color"
                        android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/account_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3sp"
                        android:layout_marginTop="10sp"
                        android:inputType="textEmailAddress"
                        android:background="@null"
                        android:hint="@string/email"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/text_color" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="4sp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_color"
                    ></LinearLayout>
                <LinearLayout
                    android:id="@+id/account_password_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="8sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/login_password" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        app:hintEnabled="false"
                        android:textColor="@color/text_color"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/text_color"
                        android:textColorHint="@color/text_color"
                        android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/account_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3sp"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/text_color" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="4sp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_color"
                    ></LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:clickable="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/login_button_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>